objects/Route_Account__c.object
<CustomObject>
    <description>POC Junction Route__c &lt;----&gt; Account</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>Account.Accel_VGT_Live_Date__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <infoMessage>Account should have a VGT Live Date</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Route Accounts</relationshipLabel>
        <relationshipName>Route_Accounts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Collection_Type__c</fullName>
        <label>Collection Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Collection_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Replenishment_Type__c</fullName>
        <label>Replenishment Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Full Audit</fullName>
                    <default>true</default>
                    <label>Full Audit</label>
                </value>
                <value>
                    <fullName>Cash Fill</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Route__c</fullName>
        <label>Route</label>
        <referenceTo>Route__c</referenceTo>
        <relationshipLabel>Route Accounts</relationshipLabel>
        <relationshipName>Route_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Stop_Number__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Stop Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X100_Fill_Level__c</fullName>
        <description>Number of $100 notes to fill this location with</description>
        <label>$100 Fill Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X1_Fill_Level__c</fullName>
        <description>Number of $1 notes to fill this location with</description>
        <label>$1 Fill Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>X20_Fill_Level__c</fullName>
        <description>Number of $20 notes to fill this location with</description>
        <label>$20 Fill Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Route Account</label>
    <listViews>
        <fullName>Accounts_Temp_Added_to_Different_Routes</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Route__c</columns>
        <filterScope>Everything</filterScope>
        <label>Accounts Temp Added to Different Routes</label>
    </listViews>
    <listViews>
        <fullName>Accounts_with_Blackout_Dates</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Route__c</columns>
        <filterScope>Everything</filterScope>
        <label>Accounts with Blackout Dates</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Route__c</columns>
        <columns>Stop_Number__c</columns>
        <columns>Account__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Route_2_1_Sun</fullName>
        <columns>NAME</columns>
        <columns>Route__c</columns>
        <columns>Account__c</columns>
        <columns>Stop_Number__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Route__c</field>
            <operation>equals</operation>
            <value>Route 2 1-Sun</value>
        </filters>
        <label>Route 2 1-Sun</label>
    </listViews>
    <nameField>
        <displayFormat>RA-{00000000}</displayFormat>
        <label>RA #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Route Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>